// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`type-generator should not transforms when disabled by function 1`] = `
"import { transformTypeToKeys } from '../../../../../src/transformerFunctions';
export interface TestProps {
  prop_a: string;
  prop_b?: string;
}
const shouldBeNullValue = null;"
`;

exports[`type-generator should not transforms when disabled by globally 1`] = `
"import { transformTypeToKeys } from '../../../../../src/transformerFunctions';
export interface TestProps {
  prop_a: string;
  prop_b?: string;
}
const typeKeys = null;"
`;

exports[`type-generator transforms ./fixtures/manual-converter/type-keys/interface-keys.ts 1`] = `
"import { transformTypeToKeys } from '../../../../src/transformerFunctions';
export interface TestProps {
  prop_a: string;
  prop_b?: string;
}
const type = ['prop_a', 'prop_b'];"
`;

exports[`type-generator transforms ./fixtures/manual-converter/type-keys/interface-keys-options.ts 1`] = `
"import { transformTypeToKeys } from '../../../../src/transformerFunctions';
export interface TestProps {
  prop_a: string;
  prop_b?: string;
}
const includeProp_b = ['prop_b'];
const excludeProp_b = ['prop_a'];"
`;
